# qt5_cmake_template

./: CMakeLists.txt  README.md  conanfile.txt
cmake/: android.cmake
cmake/android/: android_arm64
src/: CMakeLists.txt  main.cc  main_window.cc  main_window.hh  main_window.ui  resources.qrc
